# learn-cmake

./: Makefile  README.md
cmake/: BuildInfo.cmake  Poco.cmake  buildinfo.h.in
src/: CMakeLists.txt
src/actuator/: CMakeLists.txt  health.cpp  info.cpp
src/actuator/include/actuator/: health.h  info.h
src/app/: CMakeLists.txt  app.cpp
src/logger/: CMakeLists.txt  logger.cpp  poco.cpp
src/logger/include/logger/: logger.h  poco.h
test/: CMakeLists.txt
test/actuator/: CMakeLists.txt  health_test.cpp  info_test.cpp
test/logger/: CMakeLists.txt  logger_test.cpp
